# givr

./: AUTHORS  CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindGLM.cmake
docs/: requirements.txt
docs/source/: camera_and_projection.rst  conf.py  examples.rst  geometry.rst  index.rst  overview.rst  quickstart.rst  styles.rst  user-manual.rst
docs/source/gfx/: givr.rst  windowing.rst
docs/source/quick-start/: quick-start.rst
docs/source/reference-manual/: camera_and_projection.rst  geometry.rst  styles.rst
docs/source/user-manual/: examples.rst  introduction.rst  overview.rst  quickstart.rst  windowing.rst
examples/: CMakeLists.txt
examples/bin-src/: introduction-windowing.cpp  introduction.cpp  kitchen-sink.cpp  linetransformations.cpp  pbd.cpp  sph.cpp  triangle.cpp  wave.cpp
examples/libs/: glad.c  io.h  turntable_controls.h
examples/libs/glad/: glad.h
examples/src/: grid2.cpp  grid2.h
src/: givr.h
src/givr/: array_renderer.cpp  array_renderer.h  buffer_data.cpp  buffer_data.h  cube.cpp  cube.h  draw.h  frame.cpp  frame.h  gl.h  instanced_renderer.cpp  instanced_renderer.h  mesh_loading.cpp  mesh_loading.h  renderer.cpp  renderer.h  static_assert.h  types.cpp  types.h  utility.h  vertex_array_data.h
src/givr/camera/: camera.h  orthographic.cpp  orthographic.h  parameters.h  perspective.cpp  perspective.h  projection.h  turntable.cpp  turntable.h  view_context.h
src/givr/geometry/: custom.cpp  custom.h  cylinder.cpp  cylinder.h  geometry.h  line.cpp  line.h  mesh.cpp  mesh.h  multiline.cpp  multiline.h  parameters.h  polyline.cpp  polyline.h  quad.cpp  quad.h  sphere.cpp  sphere.h  tiny_obj_loader.h  triangle.cpp  triangle.h  triangle_soup.cpp  triangle_soup.h
src/givr/gl/: buffer.cpp  buffer.h  program.cpp  program.h  shader.cpp  shader.h  stb_image.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
src/givr/styles/: flatfill.cpp  flatfill.h  flatshading.cpp  flatshading.h  lines.cpp  lines.h  linestrip.cpp  linestrip.h  linestyle.cpp  linestyle.h  noshading.cpp  noshading.h  parameters.h  phong.cpp  phong.h  static_assert.h  style.h
tools/: givrunity.py
